--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
 	font-family: 'Comic Sans MS', arial;
-	background-image: url("sea.png");
+	background-image: url('underwater.jpg');
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover; 
 }
 
 .container {
-	margin: 100px;
+	margin-left: 115px;
+	margin-right: 100px;
 }
 
 h4 {
@@ -12,7 +16,8 @@ h4 {
 	color: #2B5994;
 	text-decoration: underline;	
 	font-family: 'Chalkduster', fantasy; 
-	margin-left: 400px;                    
+	margin-left: auto;
+	text-align: center;
 }
 
 h1 {
@@ -26,6 +31,7 @@ h2 {
 	font-size: 25px;
 	color: #4169E1;
 	text-decoration: underline;
+	font-family: 'Merienda', cursive;
 }
 
 h3	{
@@ -35,7 +41,7 @@ h3	{
 
 
 
-p	{font-size: 20px;
+p	{font-size: 18px;
 }
 
 
@@ -63,8 +69,7 @@ ul#navbar {
 }
 
 li {
-  float: left;
-  font-size: 20px;
+  font-size: 18px;
   margin-left: 70px; 
 }
 
@@ -74,6 +79,18 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  border-width: 5px;
+}
+
+li.nav {
+  font-size: 20px;
+  align-items: center;
+  float: left;
+}
+
+#test {
+  margin-top: -30px;
+  margin-bottom:-15px;
 }
 
 /* Change the link color to #062878 on hover */
@@ -95,30 +112,29 @@ li a:hover {
 }
 
 
-button {
-	border:none;
-	padding: 50px;
-	border-radius:8px;
-	background:#4169E1;
-	font:bold 13px Arial;
-	color:#fff;
-}
-
-#button {
-
-    width: 250px;
-    margin: auto;
-}
-
-#button :hover {
-background-color: #f41691;
-color:#ffff;
-}
-
 a {
 	font-size: 20px;
 }
 
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #090056; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #062878; /* Add a dark-grey background on hover */
+}
 
 .videos {
 margin: 0 auto;
@@ -133,3 +149,10 @@ img {
 	margin: 0 auto;
 	width: 700px;
 }
+
+img.logo {
+	margin-top: 0px;
+	margin-bottom:0px; 
+}
+
+
